--- a/front-end/my-vite-app/src/screens/survey/Survey.css
+++ b/front-end/my-vite-app/src/screens/survey/Survey.css
@@ -124,12 +124,7 @@
   }
 
   .dot.active{
-    background: linear-gradient(124deg, #ff2200c7, #e81d1dc7, #e8b71dc7, #e3e81dc7, #1de840c7, #1ddde8c7, #2b1de8c7, #dd00f3c7, #dd00f3c7);
-    background-size: 1800% 1800%;
-    -webkit-animation: rainbow 18s ease infinite;
-    -z-animation: rainbow 18s ease infinite;
-    -o-animation: rainbow 18s ease infinite;
-    animation: rainbow 18s ease infinite;
+    background-color: rgb(103, 103, 103);
   }
 
 
@@ -140,7 +135,7 @@
 }
 
 .container-survey .star-content .star {
-  
+    font-size: 50px;
     cursor: pointer;
     border: none;
     background-color: transparent;
