--- a/front-end/my-vite-app/src/screens/module-page/topics/Topics.css
+++ b/front-end/my-vite-app/src/screens/module-page/topics/Topics.css
@@ -10,8 +10,7 @@
 .course-module{
     display: flex;
     flex-direction: row;
-    align-content: center;
-    align-items: center;
+    align-items: flex-start;
     overflow-y: scroll;
 }
 
@@ -52,6 +51,9 @@
     margin-right: 20px;
     border: none;
     background-color: rgba(0, 0, 0, 0.324);
+    -webkit-box-shadow: inset 1px -9px 15.5px -3px #00000056;
+    -moz-box-shadow: inset 1px -9px 15.5px -3px #00000056;
+    box-shadow: inset 1px -9px 15.5px -3px #00000056;
 }
 
 .topic-button:hover{
@@ -62,11 +64,16 @@
 }
 
 .topic-video{
-    width: 50%;
-    height: 25vh;
+    width: 35%;
+    height: 28vh;
     border: none;
     border-radius: 8px;
     margin: 20px;
+}
+
+.course-module h3{
+    font-size: 30px;
+    letter-spacing: 0.01px;
 }
 
 .topic{
@@ -79,11 +86,10 @@
 
 .topic-text{
     padding-right: 90px;
-    width: 50%;
+    width: 65%;
 }
 
 .recommendations{
     display: flex;
     flex-direction: row;
 }
-
