--- a/front-end/my-vite-app/src/screens/profile-page/Profile.css
+++ b/front-end/my-vite-app/src/screens/profile-page/Profile.css
@@ -40,10 +40,9 @@
     background-color: #fdfdfd;
     padding: 15px;
     width: 300px;
-    height: 50vh;
     padding: 15px;
-    width: 300px;
-    height: 350px;
+    width: 35vh;
+    height: 40vh;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     display: flex;
     flex-direction: column;
@@ -59,8 +58,7 @@
 .created-author{
     background-color: white;
     padding: 15px;
-    width: 300px;
-    height: 50vh;
+    width: 35vh;
     width: 100%;
     display: flex;
     flex-direction: row;
