--- a/front-end/my-vite-app/src/screens/module-page/topics/Topics.css
+++ b/front-end/my-vite-app/src/screens/module-page/topics/Topics.css
@@ -39,6 +39,22 @@
     box-shadow: inset 1px -9px 15.5px -3px #dddddd;
 }
 
+.editing-box{
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    resize: none;
+}
+
+.editing-button{
+
+}
+
 .dark{
     display: flex;
     width: 50px;
