--- a/front-end/my-vite-app/src/screens/module-page/topics/Topics.css
+++ b/front-end/my-vite-app/src/screens/module-page/topics/Topics.css
@@ -1,10 +1,10 @@
 .sidebar{
     display: flex;
-    display: flex;
     flex-wrap: wrap;
+    width: 15%;
     flex-direction: column;
     align-items: flex-start;
-    margin: 30px;
+    margin: 50px 20px;
 }
 
 .course-module{
@@ -12,12 +12,13 @@
     flex-direction: row;
     align-items: flex-start;
     overflow-y: scroll;
+    width: 100%;
 }
 
 .modules{
     padding: 10px;
     display: flex;
-    width: 30vh;
+    width: 15%;
     margin: 20px;
     flex-direction: row;
 }
@@ -41,18 +42,32 @@
 
 .editing-box{
     display: flex;
-    width: 100%;
+    width: 100vh;
     height: 100vh;
     padding: 12px 20px;
     box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    background-color: #f8f8f8;
+    border: 1px solid #9f9f9f41;
+    border-radius: 8px;
+    outline: none;
+    background-color: #ffffff;
+    /* box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px; */
     resize: none;
 }
 
-.editing-button{
 
+.editing-button{
+    color: #000000;
+    border: none;
+    border-radius: 8px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    background-image: radial-gradient(farthest-corner at 10% 20%, rgba(223, 168, 248, 0.5) 0%, rgba(168,222,258,0.5) 21.9%, rgba(189,250,205,0.5) 35.6%, rgba(243,250,189,0.5) 53.9%, rgba(250,227,189,0.5) 66.8%, rgba(248,172,171,0.5) 95%, rgba(254,170,212,0.5) 99.9% );
+    padding: 8px 15px;
+    font-size: 12px;
+    line-height: 20px;
+    transition: all .2s;
+    margin: 10px;
 }
 
 .dark{
@@ -102,12 +117,12 @@
     align-items: center;
     flex-direction: row;
     justify-content: space-between;
-    padding: 30px;
+    padding: 50px 10px;
 }
 
 .topic-text{
-    padding-right: 90px;
-    width: 65%;
+    padding-right: 5vh;
+    width: 90%;
 }
 
 .recommendations{
