--- a/front-end/my-vite-app/src/screens/create-page/CreateCourse.css
+++ b/front-end/my-vite-app/src/screens/create-page/CreateCourse.css
@@ -16,6 +16,17 @@
     margin: 10vh;
 }
 
+.editing-box{
+    outline: none;
+    display: block;
+    width: 100%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #555;
+    line-height: 1.2;
+    height: 30vh;
+    padding-right: 15px;
+}
+
 .photo-search{
     width: 150px;
     height: 150px;
