--- a/front-end/my-vite-app/src/screens/code-pad/CodePad.css
+++ b/front-end/my-vite-app/src/screens/code-pad/CodePad.css
@@ -231,3 +231,22 @@
     transform: translate(-50%, -50%);
     width: 100%;
   }
+
+  .active-users {
+    display: flex;
+    gap: 10px;
+    padding: 10px;
+}
+
+.user {
+    display: flex;
+    align-items: center;
+}
+
+.user-color {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    margin-right: 5px;
+}
+
