--- a/front-end/my-vite-app/src/screens/code-pad/CodePad.css
+++ b/front-end/my-vite-app/src/screens/code-pad/CodePad.css
@@ -4,13 +4,12 @@
     /* align-items: center; */
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-between;
     color: #d8d4d6;
     background-color: #1e1e1e;
 }
 
 .ide{
-    width: 75%;
+    width: 69%;
     /* background-color: #282c34; */
     color: white;
     padding: 10px;
@@ -26,7 +25,7 @@
 
 .output{
   padding-top: 15px;
-  height: 20vh;
+  height: 50vh;
   padding-left: 10px;
 }
 
@@ -61,13 +60,8 @@
     transform: scale(1.1);
 }
   .copilot{
-    margin: 0;
-    padding: 0;
-    width: 24%;
-    background-color: rgb(23 23 23 / var(--un-bg-opacity));
-    position: fixed;
-    height: 100%;
-    overflow: auto;
+    padding-top: 5vh;
+    height: 70vh;
     border: 10px black;
     padding: 3px;
   }
@@ -82,7 +76,6 @@
     -z-animation: rainbow 18s ease infinite;
     -o-animation: rainbow 18s ease infinite;
     animation: rainbow 18s ease infinite;
-
   }
 
   @-webkit-keyframes rainbow {
@@ -106,29 +99,26 @@
       100%{background-position:0% 82%}
   }
 
-  .copilot-bottom{
-    position: absolute;
-    bottom: 0;
-    width: 99%;
-    margin-bottom: 30px;
-  }
 
   .copilot-search{
+    width: 100%;
     display: flex;
+    flex-direction: row;
     align-items: center;
-    color: #d8d4d6;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    background-color: white;
     justify-content: space-between;
-    border-radius: 5px;
-    border: 1px solid #d8d4d6
+    border-radius: 8px;
+    padding: 3px;
+    margin: 10px;
   }
 
   .copilot-input{
-    color: #d8d4d6;
-    padding: 8px;
-    border: none;
     width: 90%;
+    padding: 5px;
+    letter-spacing: 1px;
+    line-height: 20px;
     border-radius: 8px;
-    background: transparent;
   }
 
   .copilot-run{
@@ -141,7 +131,7 @@
   .chat-log{
     overflow-y: auto;
     width: 100%;
-    height: 89%;
+    height: 50vh;
     display: flex;
     flex-direction: column;
   }
@@ -250,3 +240,153 @@
     margin-right: 5px;
 }
 
+.side-bar{
+  display: flex;
+  flex-direction: column;
+  width: 28%;
+  align-items: center;
+  background-color: #1e1e1e;
+  color: white;
+}
+
+.chat{
+  display: flex;
+  flex-direction: column-reverse;
+  height: 70vh;
+  background-color: #1e1e1e;
+  color: white;
+}
+
+.chat-messages {
+  flex: 1;
+  padding: 10px;
+  overflow-y: auto;
+}
+
+.chat-message {
+  margin-bottom: 5px;
+}
+
+.chat-username {
+  font-weight: bold;
+  margin-right: 5px;
+}
+
+.chat-text {
+  word-wrap: break-word;
+}
+
+.chat-input {
+  display: flex;
+}
+
+.chat-input{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  background-color: white;
+  justify-content: space-between;
+  border-radius: 8px;
+  padding: 3px;
+  margin: 10px;
+}
+
+.chat-input-field{
+  width: 90%;
+  padding: 5px;
+  letter-spacing: 1px;
+  line-height: 20px;
+  border-radius: 8px;
+}
+.send-button{
+  color: #1a1b1f;
+  border: none;
+  border-radius: 8px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  background: rgba(255, 255, 255, 0.688);
+  line-height: 20px;
+  padding: 3px 8px;
+  transition: all .2s;
+}
+
+.send-button:hover {
+  color: #fff;
+  background-color: #32343a;
+}
+
+.send-button:active {
+  background-color: #43464d;
+}
+
+
+.chat-copilot{
+  padding-top: 5px;
+}
+
+.chat-button{
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  background-color: #000000;
+  line-height: 20px;
+  padding: 3px 8px;
+  transition: all .2s;
+  margin-right: 5px;
+}
+.chat-button:hover {
+  color: #fff;
+  background-color: #32343a;
+}
+
+.chat-button:active {
+  background-color: #43464d;
+}
+
+
+.copilot-button{
+  color: #1a1b1f;
+  border: none;
+  border-radius: 8px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  background-image: linear-gradient(to right, rgba(223, 168, 248, 0.687) 0%, rgba(168,222,258,0.687) 21.9%, rgba(189,250,205,0.687) 35.6%, rgba(243,250,189,0.687) 53.9%, rgba(250,227,189,0.687) 66.8%, rgba(248,172,171,0.687) 95%, rgba(254,170,212,0.687) 99.9% );
+  line-height: 20px;
+  padding: 3px 8px;
+  transition: all .2s;
+  margin-left: 5px;
+}
+
+.copilot-button:hover {
+  color: #fff;
+  background-color: #32343a;
+}
+
+.copilot-button:active {
+  background-color: #43464d;
+}
+
+.copilot-search-button{
+    color: #1a1b1f;
+    border: none;
+    border-radius: 8px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    background: rgba(255, 255, 255, 0.688);
+    line-height: 20px;
+    padding: 3px 10px;
+    transition: all .2s;
+}
+
+.copilot-search-button:hover {
+  color: #fff;
+  background-color: #32343a;
+}
+
+.copilot-search-button:active {
+  background-color: #43464d;
+}
